studio's waiting dialog now shows over all other dialogs; addresses issue with import databases not showing the wait dialog
git-svn-id: https://src.springsource.com/svn/wm_svn/eng3/trunk@30145 bab4cc61-abf4-0310-9601-8b162d8b0fb1

--- a/dev/studio/webapproot/pages/Studio/Studio.css
+++ b/dev/studio/webapproot/pages/Studio/Studio.css
@@ -1506,3 +1506,7 @@ body.wm-darksnazzy .wmToolbar button:hover {
     vertical-align: top;
     padding: 0px 3px;
 }
+
+#studio_dialog {
+    z-index: 999 !important;
+}
